<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="find_my_representatives">FIND MY REPRESENTATIVES</string>
    <string name="upcoming_elections">UPCOMING ELECTIONS</string>
    <string name="saved_elections">SAVED ELECTIONS</string>
    <string name="political_preparedness_app_logo">Political Preparedness App Logo</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="election_information">Election Information</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="no_mailing_address">None</string>
    <string name="voter_info_error">Voter Info could not be retrieved</string>
    <string name="use_my_location">USE MY LOCATION</string>
    <string name="my_representatives">My Representatives</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="web_site">Web site</string>
    <string name="facebook_page">facebook page</string>
    <string name="twitter_page">twitter page</string>
    <string name="official_image">official image</string>
    <string name="representative_search">Representative Search</string>
    <string name="no_representative_search">Representatives not found</string>
    <string name="error_occurs">An error has occurred. Please, try again later.</string>
    <string name="no_address_found">Address not found for your current location. Please, try filling the above form instead.</string>
    <string name="no_upcoming_election">No upcoming election found</string>
</resources>
