<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/launchContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- TODO: Add image for home screen logo. -->

        <ImageView
            android:id="@+id/logoImageView"
            android:src="@drawable/ballot_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/upcomingButton"
            android:padding="40dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/political_preparedness_app_logo" />

        <!-- TODO: Add Button to navigate to upcoming elections. -->

        <Button
            android:id="@+id/upcomingButton"
            style="@style/Button"
            app:layout_constraintStart_toStartOf="@id/representativeButton"
            app:layout_constraintEnd_toEndOf="@id/representativeButton"
            app:layout_constraintBottom_toTopOf="@id/representativeButton"
            android:layout_marginBottom="16dp"
            android:text="@string/upcoming_elections"
            android:layout_width="0dp"
            android:layout_height="60dp"/>

        <!-- TODO: Add Button to navigate to representatives. -->

        <Button
            android:id="@+id/representativeButton"
            style="@style/Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/find_my_representatives"
            android:layout_width="0dp"
            android:layout_height="60dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>