<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/representativeItemContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/representativePhoto"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:padding="2dp"
            app:profileImage="@{representative.official.photoUrl}"
            tools:background="@drawable/ic_profile"
            android:contentDescription="@string/official_image" />

        <TextView
            android:id="@+id/representativePositionTextView"
            android:text="@{representative.office.name}"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:text="President of the United States"
            app:layout_constraintHorizontal_bias="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/representativeNameTextView"
            android:text="@{representative.official.name}"
            app:layout_constraintTop_toBottomOf="@id/representativePositionTextView"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:text="Donald J. Trump"
            app:layout_constraintHorizontal_bias="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/representativePartyTextView"
            android:text="@{representative.official.party}"
            app:layout_constraintTop_toBottomOf="@id/representativeNameTextView"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/wwwIcon"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:text="Republican Party"
            app:layout_constraintHorizontal_bias="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/wwwIcon"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/facebookIcon"
            app:layout_constraintRight_toLeftOf="@id/facebookIcon"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_www"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/web_site" />

        <ImageView
            android:id="@+id/facebookIcon"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintRight_toLeftOf="@id/twitterIcon"
            app:layout_constraintBottom_toBottomOf="@id/twitterIcon"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_facebook"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/facebook_page" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_twitter"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/twitter_page" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>